# UEBabyPram

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  xmake.lua  xmake_generate_vs_project.ps1
UEBabyPram/: CMakeLists.txt  UEBabyPram.ixx  UEBabyPramInsight.ixx  UEBabyPramInsightDefine.ixx  UEBabyPramInsightParser.cpp  UEBabyPramInsightParser.ixx  UEBabyPramInsightTransport.cpp  UEBabyPramInsightTransport.ixx  UEBabyPramLogFilter.cpp  UEBabyPramLogFilter.ixx  UEBabyPramLogParser.cpp  UEBabyPramLogParser.ixx
UEBabyPram/InsightProtocol/: UEBabyPramInsightProtocolStage.cpp  UEBabyPramInsightProtocolStage.ixx
UEBabyPram/InsightTrace/: Protocol.h  Protocol0.h  UEBabyPramInsightAlgo.ixx  UEBabyPramInsightAnalyzer.ixx  UEBabyPramInsightDefine.ixx  UEBabyPramInsightEngine.cpp  UEBabyPramInsightEngine.ixx  UEBabyPramInsightStreamReader.cpp  UEBabyPramInsightStreamReader.ixx  UEBabyPramInsightTipPacketTransport.cpp  UEBabyPramInsightTipPacketTransport.ixx  UEBabyPramInsightTrace.ixx  UEBabyPramInsightTraceTransport.ixx  UEBabyPramInsightTransport.ixx
UEBabyPram/LogFilter/: UEBabyPramLogFilter.cpp  UEBabyPramLogFilter.ixx  UEBabyPramLogFilterMain.cpp
UEBabyPram/MiniUESource/: UEBabyPramInsightInterface.cpp  UEBabyPramInsightInterface.ixx  xmake.lua
UEBabyPram/MiniUESource/Developer/DerivedDataCache/: DerivedDataCache.Build.cs
UEBabyPram/MiniUESource/Developer/DerivedDataCache/Private/: DerivedDataBackends.cpp  DerivedDataBuild.cpp  (+33 more)
UEBabyPram/MiniUESource/Developer/DesktopPlatform/: DesktopPlatform.Build.cs
UEBabyPram/MiniUESource/Developer/TargetPlatform/: TargetPlatform.Build.cs
UEBabyPram/MiniUESource/Developer/TraceServices/: TraceServices.Build.cs  TraceServices.natvis
UEBabyPram/MiniUESource/Runtime/FramePro/: FrameProConfig.h
UEBabyPram/MiniUESource/Runtime/Launch/: Launch.Build.cs
UEBabyPram/UEBabyPramInsightParser/: UEBabyPramInsight.cpp  UEBabyPramInsight.ixx  UEBabyPramInsightParser.cpp  UEBabyPramInsightParser.ixx  UEBabyPramInsightParserAnalysisInterface.ixx  UEBabyPramInsightParserAnalysisSession.cpp  UEBabyPramInsightParserAnalysisSession.ixx  UEBabyPramInsightParserCPUAnalysis.cpp  UEBabyPramInsightParserCPUAnalysis.ixx  UEBabyPramInsightParserCPUProvider.cpp  UEBabyPramInsightParserCPUProvider.ixx  UEBabyPramInsightParserInterface.ixx  xmake.lua
src/: CMakeLists.txt  UEBabyPramLogFilter.cpp
(+1519 files in other folders)
